fix: update visibility settings and minimum police requirements; adjust UI styles

--- a/html/style.css
+++ b/html/style.css
@@ -25,7 +25,7 @@
   width: 92%;
   height: 5vh;
   margin: 1.7vh 1.3vh 0vh 1.7vh;
-  background: rgba(241, 229, 66, 0.651);
+  background: rgba(0, 125, 255, 0.8);
 }
 
 .scoreboard-header > p {
@@ -84,7 +84,7 @@
 }
 
 .fa-times {
-  color: rgba(241, 229, 66, 0.651);
+  color: rgba(0, 125, 255, 0.8);
 }
 
 .fa-check {
@@ -92,5 +92,5 @@
 }
 
 .fa-clock {
-  color: #2873a7;
+  color: rgba(255, 0, 0, 0.651);
 }
